# Dumbot

./: README.md  boo.py  bot.py  config.ini  profane.py  pyproject.toml  realtype.py  requirements.txt  responses.py
cogs/: commands.py  configinit.py  listener.py  main.py  nukegen.py  previewer.py  sauce.py  startup.py  util.py  weather.py
static/assets/bootstrap/js/: bootstrap.min.js
templates/: Untitled.bsdesign  index.html  page.html
