[tool.poetry]
name = "repl_python3_Dumbot-1"
version = "0.1.0"
description = ""
authors = ["Neek0tine <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
psutil = "^5.8.0"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
