[tool.poetry]
name = "repl_python3_Dumbot"
version = "0.1.0"
description = ""
authors = ["Neek0tine <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
psutil = "^5.8.0"
NHentai-API = "^0.0.19"
"nhentai.py" = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
